# Bases_de_la_programaci-n_en-_C-2

./: CMakeLists.txt  README.md  main.cpp  main.h
ej1/: variables.cpp  variables.h
ej2/: prueba.cpp  prueba.h
ej3/: bucles.cpp  bucles.h  bucles2.cpp  bucles2.h  bucles3.cpp  bucles3.h  bucles4.cpp  bucles4.h
ej4/: arrays.cpp  arrays.h
